# SevenSeas

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
src/: app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: index.ts
src/lib/@types/: index.ts  rd.ts  rqbit.types.ts  types.ts
src/lib/components/CustomComponents/: HLTB.svelte  IGDBImage.svelte  LightSwitch.svelte  NavLink.svelte  Search.svelte
src/lib/components/CustomComponents/NavNotifications/: NavNotifications.svelte  (+1 more)
src/lib/components/cards/: DefaultCard.svelte
src/lib/containers/: MainContainer.svelte  NavigationBar.svelte
src/lib/containers/TitleBar/: Control.svelte  TitleBar.svelte
src/lib/utils/: fetcher.ts  index.ts  utils.ts
src/lib/utils/realdebrid/: auth.ts  index.ts  torrents.ts  unrestrict.ts  user.ts
src/lib/utils/rqbit/: api.ts
src/lib/utils/store/: index.ts
src/plugins/: type.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/downloads/: +page.svelte
src/routes/downloads/components/: TorrentCard.svelte
src/routes/downloads/stores/: stores.ts
src/routes/downloads/utils/: rqbitController.ts  torrentDataProvider.ts
src/routes/faq/: +page.svelte
src/routes/info/[id]/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte
src/routes/settings/components/: ProgressBar.svelte  login.modal.svelte
src/routes/settings/stores/: index.ts
src/routes/settings/types/: index.ts
src/routes/settings/utils/: ConfigManagment.ts  index.ts  realdebrid.ts
static/: index.html  splashscreen.html
(+36 files in other folders)
